--- a/washington-dc/index.html
+++ b/washington-dc/index.html
@@ -31,7 +31,7 @@
     <div class="page" style="background-image: url('7.png');"></div>
     <div class="page" style="background-image: url('8.png');"></div>
     <div class="page" style="background-image: url('9.png');"></div>
-    <!-- Make sure you have the correct path for your images -->
+    <div class="page" style="background-image: url('10.png');"></div>
 </div>
 
 <script>
