--- a/washington-dc/index.html
+++ b/washington-dc/index.html
@@ -21,17 +21,19 @@
 <body>
 
 <div id="flipbook">
-    <div class="page" style="background-image: url('0.png');"></div>
-    <div class="page" style="background-image: url('1.png');"></div>
-    <div class="page" style="background-image: url('2.png');"></div>
-    <div class="page" style="background-image: url('3.png');"></div>
-    <div class="page" style="background-image: url('4.png');"></div>
-    <div class="page" style="background-image: url('5.png');"></div>
-    <div class="page" style="background-image: url('6.png');"></div>
-    <div class="page" style="background-image: url('7.png');"></div>
-    <div class="page" style="background-image: url('8.png');"></div>
-    <div class="page" style="background-image: url('9.png');"></div>
-    <div class="page" style="background-image: url('10.png');"></div>
+    <div class="page" style="background-image: url('resized_0.png');"></div>
+    <div class="page" style="background-image: url('resized_1.png');"></div>
+    <div class="page" style="background-image: url('resized_2.png');"></div>
+    <div class="page" style="background-image: url('resized_3.png');"></div>
+    <div class="page" style="background-image: url('resized_4.png');"></div>
+    <div class="page" style="background-image: url('resized_5.png');"></div>
+    <div class="page" style="background-image: url('resized_6.png');"></div>
+    <div class="page" style="background-image: url('resized_7.png');"></div>
+    <div class="page" style="background-image: url('resized_8.png');"></div>
+    <div class="page" style="background-image: url('resized_9.png');"></div>
+    <div class="page" style="background-image: url('resized_10.png');"></div>
+    <div class="page" style="background-image: url('resized_11.png');"></div>
+    <div class="page" style="background-image: url('resized_12.png');"></div>
 </div>
 
 <script>
@@ -44,4 +46,3 @@
 
 </body>
 </html>
-
